fix: get rid of horizontal scrollbar

--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,8 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  max-width: 100vw;
-  min-width: 100vw;
+  max-width: 100%;
+  width: 100vw;
   min-height: 100vh;
 }
 
